broken, trying to figure it out, maps does not display

--- a/maps_test/app/views/maps_test/show_map.html.erb
+++ b/maps_test/app/views/maps_test/show_map.html.erb
@@ -15,8 +15,7 @@
 
         function initialize() {
             var map = new GMap2(document.getElementById("map"));
-            map.addControl(new GSmallMapControl());
-            map.centerAndZoom(new GLatLng(145.079277, -37.811438), 5);
+            map.setCenter(new GLatLng(145.079277, -37.811438), 5);
             
             var manager = new MarkerManager(map);
 
