working now with markermanager :)

--- a/maps_test/app/views/maps_test/show_map.html.erb
+++ b/maps_test/app/views/maps_test/show_map.html.erb
@@ -23,8 +23,10 @@
             <%@places.each do |place|%>
             var point = new GLatLng(<%=place[:latitude]%>,<%=place[:longitude]%>);
             var marker = createMarker(point,'<h4><%=h place[:description]%></h4>')
-            manager.addMarker(marker);
+            manager.addMarker(marker, 10);
             <%end%>
+            
+            manager.refresh();
         }
     </script>
 
